--- a/style.css
+++ b/style.css
@@ -204,6 +204,10 @@ a:visited {
     font-size: 1rem;
 }
 
+.bio p a {
+    text-decoration: underline;
+}
+
 /* Remove all color styling from inline text */
 .bio strong[style],
 p strong[style] {
